Fixed the bottom scrollbar size, made it similar to the side scrollbar sizing.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,9 +14,12 @@ body {
     margin: 0;
 }
 
+ /* Scroll Bar Styles */
+ 
 ::-webkit-scrollbar {
     background: #0f0f0f;
-    width: 4px;
+    height: 5px;
+    width: 5px;
     border-radius: 10px;
 }
 
